CASSANALYTICS-82: Migrate from JUnit assertions to AssertJ (#135)
Patch by Yifan Cai; Reviewed by Francisco Guerrero for CASSANALYTICS-82